@startuml
abstract class Person {
+ Id : int
+ LastName : string
+ First : string
+ Patronymic : string
+ DateOfBirth : DateTime
}

Person <|-- Teacher
class Teacher {
+ Faculty :string
+ Subjects : string[]
}

Teacher <--* Mark
class Mark {
+ Id : string
+ Date : DateTime
+ Subject : string
+ Teacher : Teacher
+ Rating : int
}

Mark <--o Student
Person <|-- Student
class Student {
+ Faculty :string
+ Marks : Mark[]
}




@enduml